updated to implement sending a prompt to chatgpt.

--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,8 @@
 {
     // Comments are accepted in the manifest, even though it is JSON.
     "manifest_version": 3,
-    "name": "Chrome Extension v3 Starter",
-    "description": "A minimal example of a chrome extension using manifest v3",
+    "name": "OpenAI Chat Anywhere Extension",
+    "description": "Allows the user to input a prompt and sends it to chat.openai.com",
     "version": "0.0.1",
     "icons": {
         "16": "logo/logo-16.png",
@@ -12,17 +12,26 @@
     "options_page": "settings/settings.html",
     "action": {
         "default_title": "Chrome Addon v3 Starter",
-        "default_popup": "popup/popup.html"
+        "default_popup": "popup/popup.html",
+        "default_icon": "logo/logo-16.png"
+        
     },
-    "permissions": [],
+    "permissions": [
+        "scripting",
+        "activeTab"
+        
+      ],
     "host_permissions": [
-        "*://*/*"
+        "*://*/*",
+        "https://chat.openai.com/*"
     ],
     "background": {
         "service_worker": "service-worker.js"
     },
-    "content_scripts": [{
-        "js": ["foreground.js"],
-        "matches": ["https://github.com/*"]
-    }]
+    "content_scripts": [
+       {
+        "matches": ["https://chat.openai.com/*"],
+        "js": ["gptScript.js"]
+       }
+    ]
 }
